# ms-strlib

./: .gitmodules  CMakeLists.txt  README.md
inc/: ms_strop.h  ms_strop_error_codes.h
src/: ms_strop.c
test/: AllTests.cpp  CMakeLists.txt  TestStrLib.cpp
test/platform/: common.h  porting.h
